kernel/process.h

int process_spawn(void (*entry)(void), int is_user);
void process_exit(uint64_t code);